--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,18 @@
     padding: 0;
 }
 
-html, body, #root, #container {
-    height: 100%;
+html, body, #root, #container, canvas {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    position: relative; 
+}
+
+canvas {
+    display: block;
+    position: absolute; 
+    top: 0;
+    left: 0;
 }
 
 .ui-root {
