--- a/src/UI/UI.module.scss
+++ b/src/UI/UI.module.scss
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   gap: 2vh; /* Space between icons scales with the viewport height */
+  pointer-events: auto;
 }
 
 /* Individual icon styles */
@@ -38,6 +39,7 @@
   position: absolute;
   bottom: 2%;
   left: 2%;
+  pointer-events: auto;
 }
 
 .brandLogo {
@@ -50,6 +52,7 @@
   position: absolute;
   bottom: 2%;
   right: 2%;
+  pointer-events: auto;
 }
 
 .chatLogo {
