--- a/src/UI/UI.module.scss
+++ b/src/UI/UI.module.scss
@@ -37,13 +37,13 @@
 /* Brand logo on bottom-left */
 .brandLogoContainer {
   position: absolute;
-  bottom: 2%;
-  left: 2%;
+  bottom: 1%;
+  left: 3%;
   pointer-events: auto;
 }
 
 .brandLogo {
-  width: 8vw;
+  width: 12vw;
   height: auto;
 }
 
@@ -97,9 +97,13 @@
     width: 7vw; /* Slightly larger icons for mobile */
   }
 
-  .brandLogo,
+  
   .chatLogo {
     width: 10vw; /* Larger logos for mobile */
+  }
+
+  .brandLogo{
+    width: 20vw;
   }
 }
 
@@ -114,8 +118,12 @@
     width: 10vw; /* Larger icons for mobile */
   }
 
-  .brandLogo,
+
   .chatLogo {
     width: 15vw; /* Adjust logos for smaller screens */
+  }
+
+  .brandLogo{
+    width: 27vw;
   }
 }
